Updated NLP Twitter.ipynb with new models and improved accuracy

--- a/NLP/Twitter/Twitter.ipynb
+++ b/NLP/Twitter/Twitter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,12 +12,15 @@
     "%matplotlib inline\n",
     "\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer, CountVectorizer\n",
-    "from sklearn.metrics import accuracy_score, precision_score, f1_score"
+    "from sklearn.metrics import accuracy_score, precision_score, f1_score\n",
+    "\n",
+    "import keras\n",
+    "import tensorflow as tf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +112,7 @@
        "4       1  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +147,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +226,7 @@
        "4  Just got sent this photo from Ruby #Alaska as ...       1"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +238,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(7613, 2)"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,33 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy of Logistic Regression: 0.797723292469352\n"
-     ]
-    }
-   ],
-   "source": [
-    "#Prediction using logistic regression\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "\n",
-    "logreg = LogisticRegression().fit(X_train, y_train)\n",
-    "\n",
-    "# Predict sentiment on the test set\n",
-    "predictions_lr = logreg.predict(X_test)\n",
-    "\n",
-    "# Calculate evaluation metrics\n",
-    "print(\"Accuracy of Logistic Regression:\", accuracy_score(y_test, predictions_lr))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -305,6 +302,101 @@
     "\n",
     "# Calculate evaluation metrics\n",
     "print(\"Accuracy of Random Forest Classifier:\", accuracy_score(y_test, predictions_rf))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "cc52943251e64e4987076fc0bea7f2a4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Optimization Progress:   0%|          | 0/120 [00:00<?, ?pipeline/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Generation 1 - Current best internal CV score: 0.7834456394401431\n",
+      "\n",
+      "Generation 2 - Current best internal CV score: 0.7834456394401431\n",
+      "\n",
+      "Generation 3 - Current best internal CV score: 0.7834456394401431\n",
+      "\n",
+      "Generation 4 - Current best internal CV score: 0.79095438169983\n",
+      "\n",
+      "Generation 5 - Current best internal CV score: 0.7915154718177734\n",
+      "\n",
+      "Best pipeline: LogisticRegression(input_matrix, C=1.0, dual=False, penalty=l2)\n",
+      "0.797723292469352\n"
+     ]
+    }
+   ],
+   "source": [
+    "# import tpot\n",
+    "from tpot import TPOTClassifier\n",
+    "\n",
+    "tpot = TPOTClassifier(config_dict='TPOT sparse', generations=5, population_size=20, cv=5, random_state=42, verbosity=2)\n",
+    "tpot.fit(X_train, y_train)\n",
+    "print(tpot.score(X_test, y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train_final = vectorizer.fit_transform(df_train['text'])\n",
+    "X_test_final = vectorizer.transform(df_test['text'])\n",
+    "y_train_final = df_train['target']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rf_final = RandomForestClassifier(random_state=42).fit(X_train_final, y_train_final)\n",
+    "\n",
+    "# Predict sentiment on the test set\n",
+    "ypred = rf_final.predict(X_test_final)\n",
+    "final = np.round(ypred)\n",
+    "output = pd.DataFrame({'id': df_test.id, 'target': final})\n",
+    "output.to_csv('submission.csv', index=False)"
    ]
   },
   {
