--- a/NLP/Word2VecMovieReview/MovieReview.ipynb
+++ b/NLP/Word2VecMovieReview/MovieReview.ipynb
@@ -181,10 +181,6 @@
    "outputs": [],
    "source": [
     "def review_to_words( raw_review ):\n",
-    "    # Function to convert a raw review to a string of words\n",
-    "    # The input is a single string (a raw movie review), and \n",
-    "    # the output is a single string (a preprocessed movie review)\n",
-    "    #\n",
     "    # 1. Remove HTML\n",
     "    review_text = BeautifulSoup(raw_review).get_text() \n",
     "    #\n",
@@ -335,10 +331,10 @@
     "\n",
     "# Initialize the \"CountVectorizer\" object, which is scikit-learn's\n",
     "# bag of words tool.  \n",
-    "vectorizer = CountVectorizer(analyzer = \"word\",   \\\n",
-    "                             tokenizer = None,    \\\n",
-    "                             preprocessor = None, \\\n",
-    "                             stop_words = None,   \\\n",
+    "vectorizer = CountVectorizer(analyzer = \"word\", \n",
+    "                             tokenizer = None, \n",
+    "                             preprocessor = None, \n",
+    "                             stop_words = None, \n",
     "                             max_features = 5000) \n",
     "\n",
     "# fit_transform() does two functions: First, it fits the model\n",
@@ -5402,88 +5398,6 @@
     "for tag, count in zip(vocab, dist):\n",
     "    print(count, tag)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>sentiment</th>\n",
-       "      <th>review</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>\"5814_8\"</td>\n",
-       "      <td>1</td>\n",
-       "      <td>\"With all this stuff going down at the moment ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>\"2381_9\"</td>\n",
-       "      <td>1</td>\n",
-       "      <td>\"\\\"The Classic War of the Worlds\\\" by Timothy ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>\"7759_3\"</td>\n",
-       "      <td>0</td>\n",
-       "      <td>\"The film starts with a manager (Nicholas Bell...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>\"3630_4\"</td>\n",
-       "      <td>0</td>\n",
-       "      <td>\"It must be assumed that those who praised thi...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>\"9495_8\"</td>\n",
-       "      <td>1</td>\n",
-       "      <td>\"Superbly trashy and wondrously unpretentious ...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         id  sentiment                                             review\n",
-       "0  \"5814_8\"          1  \"With all this stuff going down at the moment ...\n",
-       "1  \"2381_9\"          1  \"\\\"The Classic War of the Worlds\\\" by Timothy ...\n",
-       "2  \"7759_3\"          0  \"The film starts with a manager (Nicholas Bell...\n",
-       "3  \"3630_4\"          0  \"It must be assumed that those who praised thi...\n",
-       "4  \"9495_8\"          1  \"Superbly trashy and wondrously unpretentious ..."
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "code",
