deep learn reviews

--- a/NLP/Word2VecMovieReview/MovieReview.ipynb
+++ b/NLP/Word2VecMovieReview/MovieReview.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-11-05 17:54:08.576422: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -25,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +107,7 @@
        "4  \"9495_8\"          1  \"Superbly trashy and wondrously unpretentious ..."
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +130,7 @@
        "array(['id', 'sentiment', 'review'], dtype=object)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +246,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/jw/pk9yd5v978d_6j_wky4ptw480000gn/T/ipykernel_51831/1061016747.py:7: MarkupResemblesLocatorWarning: The input looks more like a filename than markup. You may want to open this file and pass the filehandle into Beautiful Soup.\n",
+      "/var/folders/jw/pk9yd5v978d_6j_wky4ptw480000gn/T/ipykernel_43338/2429373668.py:3: MarkupResemblesLocatorWarning: The input looks more like a filename than markup. You may want to open this file and pass the filehandle into Beautiful Soup.\n",
       "  review_text = BeautifulSoup(raw_review).get_text()\n"
      ]
     },
@@ -314,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +368,7 @@
        "(25000, 5000)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -5401,7 +5410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5410,7 +5419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -5418,7 +5427,7 @@
      "output_type": "stream",
      "text": [
       "Training the random forest...\n",
-      "Accuracy:  0.8452\n"
+      "Accuracy:  0.8422666666666667\n"
      ]
     }
    ],
@@ -5442,7 +5451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -5458,7 +5467,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/jw/pk9yd5v978d_6j_wky4ptw480000gn/T/ipykernel_51831/1061016747.py:7: MarkupResemblesLocatorWarning: The input looks more like a filename than markup. You may want to open this file and pass the filehandle into Beautiful Soup.\n",
+      "/var/folders/jw/pk9yd5v978d_6j_wky4ptw480000gn/T/ipykernel_43338/2429373668.py:3: MarkupResemblesLocatorWarning: The input looks more like a filename than markup. You may want to open this file and pass the filehandle into Beautiful Soup.\n",
       "  review_text = BeautifulSoup(raw_review).get_text()\n"
      ]
     },
@@ -5549,6 +5558,142 @@
     "\n",
     "# Use pandas to write the comma-separated output file\n",
     "output.to_csv( \"data/Bag_of_Words_model.csv\", index=False, quoting=3 )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'n_neighbors': 24}\n",
+      "0.644\n",
+      "0.6529333333333334\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "knn = KNeighborsClassifier()\n",
+    "param_grid = {'n_neighbors': np.arange(1, 25)}\n",
+    "knn_gscv = GridSearchCV(knn, param_grid, cv=5)\n",
+    "knn_gscv.fit(X_train, y_train)\n",
+    "print(knn_gscv.best_params_)\n",
+    "print(knn_gscv.best_score_)\n",
+    "print(knn_gscv.score(X_test, y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keras.models import Sequential\n",
+    "from keras.layers import Dense, Embedding, LSTM, Dropout\n",
+    "from keras.preprocessing.text import Tokenizer\n",
+    "from keras.preprocessing.sequence import pad_sequences\n",
+    "\n",
+    "model = Sequential()\n",
+    "model.add(Dense(512, input_shape=(X_train.shape[1],), activation='relu'))\n",
+    "model.add(Dense(128, activation='relu'))\n",
+    "model.add(Dropout(0.5))\n",
+    "model.add(Dense(64, activation='relu'))\n",
+    "model.add(Dropout(0.5))\n",
+    "model.add(Dense(1, activation='sigmoid'))\n",
+    "\n",
+    "model.compile(loss='binary_crossentropy', optimizer='adam', metrics=['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "18/18 [==============================] - 3s 111ms/step - loss: 0.4769 - accuracy: 0.7862 - val_loss: 0.3359 - val_accuracy: 0.8723\n",
+      "Epoch 2/10\n",
+      "18/18 [==============================] - 1s 82ms/step - loss: 0.2334 - accuracy: 0.9151 - val_loss: 0.3003 - val_accuracy: 0.8836\n",
+      "Epoch 3/10\n",
+      "18/18 [==============================] - 1s 83ms/step - loss: 0.1436 - accuracy: 0.9510 - val_loss: 0.3437 - val_accuracy: 0.8828\n",
+      "Epoch 4/10\n",
+      "18/18 [==============================] - 1s 82ms/step - loss: 0.0760 - accuracy: 0.9774 - val_loss: 0.4166 - val_accuracy: 0.8795\n",
+      "Epoch 5/10\n",
+      "18/18 [==============================] - 1s 81ms/step - loss: 0.0316 - accuracy: 0.9930 - val_loss: 0.5059 - val_accuracy: 0.8752\n",
+      "Epoch 6/10\n",
+      "18/18 [==============================] - 1s 83ms/step - loss: 0.0107 - accuracy: 0.9981 - val_loss: 0.6284 - val_accuracy: 0.8729\n",
+      "Epoch 7/10\n",
+      "18/18 [==============================] - 1s 82ms/step - loss: 0.0039 - accuracy: 0.9995 - val_loss: 0.7121 - val_accuracy: 0.8727\n",
+      "Epoch 8/10\n",
+      "18/18 [==============================] - 1s 82ms/step - loss: 0.0027 - accuracy: 0.9999 - val_loss: 0.7565 - val_accuracy: 0.8737\n",
+      "Epoch 9/10\n",
+      "18/18 [==============================] - 2s 84ms/step - loss: 0.0022 - accuracy: 0.9997 - val_loss: 0.7795 - val_accuracy: 0.8748\n",
+      "Epoch 10/10\n",
+      "18/18 [==============================] - 1s 79ms/step - loss: 0.0013 - accuracy: 0.9998 - val_loss: 0.8205 - val_accuracy: 0.8744\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.src.callbacks.History at 0x16464a8d0>"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.fit(X_train, y_train, validation_data=(X_test, y_test), epochs=10, batch_size=1024)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "235/235 [==============================] - 1s 3ms/step - loss: 0.8205 - accuracy: 0.8744\n",
+      "Accuracy: 87.44%\n"
+     ]
+    }
+   ],
+   "source": [
+    "loss, accuracy = model.evaluate(X_test, y_test)\n",
+    "print(f'Accuracy: {accuracy * 100:.2f}%')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "782/782 [==============================] - 2s 3ms/step\n"
+     ]
+    }
+   ],
+   "source": [
+    "# create output file\n",
+    "result = model.predict(test_data_features)\n",
+    "result = np.round(result).astype(int)\n",
+    "output = pd.DataFrame(data={\"id\": test[\"id\"], \"sentiment\": result[:, 0]})\n",
+    "output.to_csv(\"data/DeepLearn.csv\", index=False, quoting=3)\n"
    ]
   },
   {
