deep learn reviews

--- a/NLP/Word2VecMovieReview/MovieReview.ipynb
+++ b/NLP/Word2VecMovieReview/MovieReview.ipynb
@@ -5590,7 +5590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5612,7 +5612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -5620,34 +5620,34 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "18/18 [==============================] - 3s 111ms/step - loss: 0.4769 - accuracy: 0.7862 - val_loss: 0.3359 - val_accuracy: 0.8723\n",
+      "18/18 [==============================] - 3s 113ms/step - loss: 0.5680 - accuracy: 0.7118 - val_loss: 0.3400 - val_accuracy: 0.8681\n",
       "Epoch 2/10\n",
-      "18/18 [==============================] - 1s 82ms/step - loss: 0.2334 - accuracy: 0.9151 - val_loss: 0.3003 - val_accuracy: 0.8836\n",
+      "18/18 [==============================] - 1s 83ms/step - loss: 0.2957 - accuracy: 0.8910 - val_loss: 0.2854 - val_accuracy: 0.8895\n",
       "Epoch 3/10\n",
-      "18/18 [==============================] - 1s 83ms/step - loss: 0.1436 - accuracy: 0.9510 - val_loss: 0.3437 - val_accuracy: 0.8828\n",
+      "18/18 [==============================] - 2s 87ms/step - loss: 0.1942 - accuracy: 0.9331 - val_loss: 0.3139 - val_accuracy: 0.8867\n",
       "Epoch 4/10\n",
-      "18/18 [==============================] - 1s 82ms/step - loss: 0.0760 - accuracy: 0.9774 - val_loss: 0.4166 - val_accuracy: 0.8795\n",
+      "18/18 [==============================] - 2s 86ms/step - loss: 0.1180 - accuracy: 0.9632 - val_loss: 0.3826 - val_accuracy: 0.8819\n",
       "Epoch 5/10\n",
-      "18/18 [==============================] - 1s 81ms/step - loss: 0.0316 - accuracy: 0.9930 - val_loss: 0.5059 - val_accuracy: 0.8752\n",
+      "18/18 [==============================] - 1s 82ms/step - loss: 0.0641 - accuracy: 0.9809 - val_loss: 0.5017 - val_accuracy: 0.8767\n",
       "Epoch 6/10\n",
-      "18/18 [==============================] - 1s 83ms/step - loss: 0.0107 - accuracy: 0.9981 - val_loss: 0.6284 - val_accuracy: 0.8729\n",
+      "18/18 [==============================] - 1s 84ms/step - loss: 0.0304 - accuracy: 0.9927 - val_loss: 0.5991 - val_accuracy: 0.8765\n",
       "Epoch 7/10\n",
-      "18/18 [==============================] - 1s 82ms/step - loss: 0.0039 - accuracy: 0.9995 - val_loss: 0.7121 - val_accuracy: 0.8727\n",
+      "18/18 [==============================] - 1s 81ms/step - loss: 0.0156 - accuracy: 0.9969 - val_loss: 0.7289 - val_accuracy: 0.8707\n",
       "Epoch 8/10\n",
-      "18/18 [==============================] - 1s 82ms/step - loss: 0.0027 - accuracy: 0.9999 - val_loss: 0.7565 - val_accuracy: 0.8737\n",
+      "18/18 [==============================] - 1s 82ms/step - loss: 0.0151 - accuracy: 0.9963 - val_loss: 0.7062 - val_accuracy: 0.8744\n",
       "Epoch 9/10\n",
-      "18/18 [==============================] - 2s 84ms/step - loss: 0.0022 - accuracy: 0.9997 - val_loss: 0.7795 - val_accuracy: 0.8748\n",
+      "18/18 [==============================] - 1s 83ms/step - loss: 0.0130 - accuracy: 0.9965 - val_loss: 0.7036 - val_accuracy: 0.8743\n",
       "Epoch 10/10\n",
-      "18/18 [==============================] - 1s 79ms/step - loss: 0.0013 - accuracy: 0.9998 - val_loss: 0.8205 - val_accuracy: 0.8744\n"
+      "18/18 [==============================] - 1s 80ms/step - loss: 0.0091 - accuracy: 0.9979 - val_loss: 0.8092 - val_accuracy: 0.8707\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.src.callbacks.History at 0x16464a8d0>"
+       "<keras.src.callbacks.History at 0x166bde510>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5658,15 +5658,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "235/235 [==============================] - 1s 3ms/step - loss: 0.8205 - accuracy: 0.8744\n",
-      "Accuracy: 87.44%\n"
+      "235/235 [==============================] - 1s 3ms/step - loss: 0.8092 - accuracy: 0.8707\n",
+      "Accuracy: 87.07%\n"
      ]
     }
    ],
@@ -5677,7 +5677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
