Update df with  request date

--- a/NLP/Scraping/WebScraping.ipynb
+++ b/NLP/Scraping/WebScraping.ipynb
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,6 +237,9 @@
     "\n",
     "    # Check if the request was successful\n",
     "    if res.status_code == 200:\n",
+    "\n",
+    "        df.loc[idx, 'RequestDate'] = pd.Timestamp.now()\n",
+    "\n",
     "        # Parse the HTML content of the page\n",
     "        soup_data = BeautifulSoup(res.text, 'html.parser')\n",
     "\n",
@@ -287,28 +290,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 202,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Topic: Europe\n",
-      "Topic: Africa\n",
-      "Topic: US & Canada\n",
-      "Topic: Business\n",
-      "Topic: Europe\n",
-      "Topic: Europe\n",
-      "Topic: Science & Environment\n",
-      "Topic: Africa\n",
-      "Topic: Business\n",
-      "Topic: Middle East\n",
-      "Topic: Middle East\n",
-      "Topic: US & Canada\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Loop through the links and request each article\n",
     "for idx, link in enumerate(links):\n",
@@ -317,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
@@ -347,6 +331,7 @@
        "      <th>Content</th>\n",
        "      <th>MergedText</th>\n",
        "      <th>Topic</th>\n",
+       "      <th>RequestDate</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -358,6 +343,7 @@
        "      <td>A grenade given as a birthday present has blow...</td>\n",
        "      <td>ukraine war grenade birthday gift kills army c...</td>\n",
        "      <td>Europe</td>\n",
+       "      <td>2023-11-07 19:03:30.135958</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -367,6 +353,7 @@
        "      <td>Family members of popular Nigerian comic actor...</td>\n",
        "      <td>mr ibu nigerian nollywood actor leg amputated ...</td>\n",
        "      <td>Africa</td>\n",
+       "      <td>2023-11-07 19:03:30.249981</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -376,6 +363,7 @@
        "      <td>Tennis legend Serena Williams has been named a...</td>\n",
        "      <td>tennis great serena williams named icon tennis...</td>\n",
        "      <td>US &amp; Canada</td>\n",
+       "      <td>2023-11-07 19:03:30.356264</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -385,6 +373,7 @@
        "      <td>WeWork, the shared office firm that was once v...</td>\n",
        "      <td>wework forced file bankruptcy us wework shared...</td>\n",
        "      <td>Business</td>\n",
+       "      <td>2023-11-07 19:03:30.458452</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -394,6 +383,7 @@
        "      <td>German Chancellor Olaf Scholz has pledged to \"...</td>\n",
        "      <td>germany agrees consider plan processing asylum...</td>\n",
        "      <td>Europe</td>\n",
+       "      <td>2023-11-07 19:03:30.566354</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -403,6 +393,7 @@
        "      <td>Portuguese Prime Minister AntÃ³nio Costa says ...</td>\n",
        "      <td>portuguese pm antã³nio costa resigns lithium d...</td>\n",
        "      <td>Europe</td>\n",
+       "      <td>2023-11-07 19:03:30.662715</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -412,6 +403,7 @@
        "      <td>Europe's Euclid telescope is ready to begin it...</td>\n",
        "      <td>euclid telescope first images revealed univers...</td>\n",
        "      <td>Science &amp; Environment</td>\n",
+       "      <td>2023-11-07 19:03:30.758414</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -421,6 +413,7 @@
        "      <td>South Africa's transport minister has describe...</td>\n",
        "      <td>south africa crime thieves put gun transport m...</td>\n",
        "      <td>Africa</td>\n",
+       "      <td>2023-11-07 19:03:30.851060</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -430,6 +423,7 @@
        "      <td>Coca-Cola, Danone and Nestle have been accused...</td>\n",
        "      <td>nestle accused misleading eco claims danone ne...</td>\n",
        "      <td>Business</td>\n",
+       "      <td>2023-11-07 19:03:30.950713</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -439,6 +433,7 @@
        "      <td>A senior Hamas leader has refused to acknowled...</td>\n",
        "      <td>hamas leader refuses acknowledge killing civil...</td>\n",
        "      <td>Middle East</td>\n",
+       "      <td>2023-11-07 19:03:31.051568</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
@@ -448,6 +443,7 @@
        "      <td>It was a day that shattered Israel's sense of ...</td>\n",
        "      <td>israel pain still raw month hamas attacks war ...</td>\n",
        "      <td>Middle East</td>\n",
+       "      <td>2023-11-07 19:03:31.155008</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
@@ -457,6 +453,7 @@
        "      <td>Canadian poet Rupi Kaur has declined an invita...</td>\n",
        "      <td>canadian poet rupi kaur declines white house v...</td>\n",
        "      <td>US &amp; Canada</td>\n",
+       "      <td>2023-11-07 19:03:31.257677</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -519,22 +516,36 @@
        "10  It was a day that shattered Israel's sense of ...   \n",
        "11  Canadian poet Rupi Kaur has declined an invita...   \n",
        "\n",
-       "                                           MergedText                  Topic  \n",
-       "0   ukraine war grenade birthday gift kills army c...                 Europe  \n",
-       "1   mr ibu nigerian nollywood actor leg amputated ...                 Africa  \n",
-       "2   tennis great serena williams named icon tennis...            US & Canada  \n",
-       "3   wework forced file bankruptcy us wework shared...               Business  \n",
-       "4   germany agrees consider plan processing asylum...                 Europe  \n",
-       "5   portuguese pm antã³nio costa resigns lithium d...                 Europe  \n",
-       "6   euclid telescope first images revealed univers...  Science & Environment  \n",
-       "7   south africa crime thieves put gun transport m...                 Africa  \n",
-       "8   nestle accused misleading eco claims danone ne...               Business  \n",
-       "9   hamas leader refuses acknowledge killing civil...            Middle East  \n",
-       "10  israel pain still raw month hamas attacks war ...            Middle East  \n",
-       "11  canadian poet rupi kaur declines white house v...            US & Canada  "
+       "                                           MergedText                  Topic  \\\n",
+       "0   ukraine war grenade birthday gift kills army c...                 Europe   \n",
+       "1   mr ibu nigerian nollywood actor leg amputated ...                 Africa   \n",
+       "2   tennis great serena williams named icon tennis...            US & Canada   \n",
+       "3   wework forced file bankruptcy us wework shared...               Business   \n",
+       "4   germany agrees consider plan processing asylum...                 Europe   \n",
+       "5   portuguese pm antã³nio costa resigns lithium d...                 Europe   \n",
+       "6   euclid telescope first images revealed univers...  Science & Environment   \n",
+       "7   south africa crime thieves put gun transport m...                 Africa   \n",
+       "8   nestle accused misleading eco claims danone ne...               Business   \n",
+       "9   hamas leader refuses acknowledge killing civil...            Middle East   \n",
+       "10  israel pain still raw month hamas attacks war ...            Middle East   \n",
+       "11  canadian poet rupi kaur declines white house v...            US & Canada   \n",
+       "\n",
+       "                  RequestDate  \n",
+       "0  2023-11-07 19:03:30.135958  \n",
+       "1  2023-11-07 19:03:30.249981  \n",
+       "2  2023-11-07 19:03:30.356264  \n",
+       "3  2023-11-07 19:03:30.458452  \n",
+       "4  2023-11-07 19:03:30.566354  \n",
+       "5  2023-11-07 19:03:30.662715  \n",
+       "6  2023-11-07 19:03:30.758414  \n",
+       "7  2023-11-07 19:03:30.851060  \n",
+       "8  2023-11-07 19:03:30.950713  \n",
+       "9  2023-11-07 19:03:31.051568  \n",
+       "10 2023-11-07 19:03:31.155008  \n",
+       "11 2023-11-07 19:03:31.257677  "
       ]
      },
-     "execution_count": 197,
+     "execution_count": 203,
      "metadata": {},
      "output_type": "execute_result"
     }
