--- a/NLP/Scraping/WebScraping.ipynb
+++ b/NLP/Scraping/WebScraping.ipynb
@@ -1243,10 +1243,18 @@
     "plt.figure(figsize=(20, 10))\n",
     "plt.imshow(wordcloud, interpolation='bilinear')\n",
     "plt.axis(\"off\")\n",
-    "# plt.show()\n",
-    "# date with time\n",
+    "\n",
+    "# Save the word cloud image to the 'clouds' directory using GITHUB_WORKSPACE\n",
+    "import os\n",
+    "output_path = os.path.join(os.environ['GITHUB_WORKSPACE'], 'NLP/Scraping/clouds')\n",
     "todayDate = datetime.today().strftime('%Y-%m-%d-%H%M%S')\n",
-    "plt.savefig('clouds/' + todayDate + '_wordcloud.png', dpi=300)"
+    "image_path = os.path.join(output_path, f'{todayDate}_wordcloud.png')\n",
+    "\n",
+    "# Create the 'clouds' directory if it doesn't exist\n",
+    "os.makedirs(output_path, exist_ok=True)\n",
+    "\n",
+    "# Save the word cloud image\n",
+    "plt.savefig(image_path, dpi=300)"
    ]
   },
   {
