--- a/NLP/Scraping/WebScraping.ipynb
+++ b/NLP/Scraping/WebScraping.ipynb
@@ -16,6 +16,7 @@
     "\n",
     "from wordcloud import WordCloud\n",
     "\n",
+    "# stopwords\n",
     "import nltk\n",
     "stop_words = nltk.corpus.stopwords.words('english')\n",
     "from nltk.tokenize import word_tokenize\n",
