--- a/NLP/Scraping/WebScraping.ipynb
+++ b/NLP/Scraping/WebScraping.ipynb
@@ -1160,9 +1160,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "successfully sent email to jesselang62@gmail.com:\n"
+     ]
+    }
+   ],
    "source": [
     "import smtplib\n",
     "import os\n",
